@@ -19,13 +19,11 @@ def delay(freq, dm):
 	the dispersive delay in seconds.
 	"""
 	
-	K = 4.149e6
+	# Dispersion constant in MHz^2 s / pc cm^-3
+	D = 4.148808e3
 	
-	# Delay in ms
-	tDelay = dm*K*((1e6/freq)**2 - (1e6/freq.max())**2)
-	
-	# Conversion of s
-	tDelay /= 1000.0
+	# Delay in s
+	tDelay = dm*D*((1e6/freq)**2 - (1e6/freq.max())**2)
 	
 	return tDelay
 
@@ -53,7 +51,23 @@ def incoherent(freq, waterfall, tInt, dm):
 	return ddWaterfall
 
 
-def __chirpFunction(freq, dm):
+def __taperFunction(freq):
+	"""
+	Taper function based Equation (1) of "Pulsar Coherent De-dispersion 
+	Experiment at Urumqi Observatory" CJA&A, 2006, S2, 53.
+	"""
+
+	freqMHz = freq / 1e6
+	fMHz0 = freqMHz.mean()
+	fMHz1 = freqMHz - fMHz0
+	BW = fMHz1.max() - fMHz1.min()
+
+	taper = 1.0 / numpy.sqrt( 1.0 + ( numpy.abs(fMHz1) / (0.47*BW) )**80 )
+
+	return taper
+
+
+def __chirpFunction(freq, dm, taper=False):
 	"""
 	Chip function for coherent dedispersion for a given set of frequencies (in Hz).  
 	Based on Equation (6) of "Pulsar Observations II -- Coherent Dedispersion, 
@@ -65,12 +79,14 @@ def __chirpFunction(freq, dm):
 	fMHz1 = freqMHz - fMHz0
 	BW = fMHz1.max() - fMHz1.min()
 	
-	chirp = numpy.exp(2j*numpy.pi*dm/2.41e-10 * (fMHz1**2 / (fMHz0**2*(fMHz0 + fMHz1)))) / len(freq)
+	chirp = numpy.exp(-2j*numpy.pi*dm/2.41033087e-10 * (fMHz1**2/ (fMHz0**2*(fMHz0 + fMHz1))))
+	if taper:
+		chirp *= __taperFunction(freq)
 	
 	return chirp
 
 
-def coherent(timeseries, centralFreq, sampleRate, dm):
+def coherent(timeseries, centralFreq, sampleRate, dm, taper=False):
 	"""
 	Simple coherent dedispersion of complex-valued time-series data at a given central
 	frequency and sample rate.
@@ -78,19 +94,19 @@ def coherent(timeseries, centralFreq, sampleRate, dm):
 	
 	# Roughly estimate the number of points we need to look at to do the dedispersion 
 	# correctrly.  Based on the GMRT coherent dedispersion pipeline
-	N = 4*(centralFreq/202e6)**3*dm*(sampleRate/1e6)**2
+	N = 4*(202e6/centralFreq)**3*dm*(sampleRate/1e6)**2
 	N = 2**int(numpy.ceil(numpy.log10(N)/numpy.log10(2.0)))
 	if N < 2048:
 		N = 2048
 	
 	# Compute the chirp function
 	freq = numpy.fft.fftfreq(N, d=1/sampleRate) + centralFreq
-	chirp = __chirpFunction(freq, dm)
+	chirp = __chirpFunction(freq, dm, taper=taper)
 	
 	# Figure out the output array size
 	nSets = len(timeseries) / N
-	nDM = N / 4
-	out = numpy.zeros(nSets*(N-nDM), dtype=timeseries.dtype)
+	nDM = N / 8
+	out = numpy.zeros(timeseries.size, dtype=timeseries.dtype)
 	
 	# Go!
 	for i in xrange(nSets):
@@ -100,10 +116,9 @@ def coherent(timeseries, centralFreq, sampleRate, dm):
 		stop = start + N
 		
 		dataIn = timeseries[start:stop]
-		dataOut = numpy.fft.fft(dataIn) #* chirp
-		dataOut = numpy.fft.ifft(dataOut)
+		dataOut = numpy.fft.ifft( numpy.fft.fft(dataIn) * chirp )
 		
-		out[i*(N-nDM):(i+1)*(N-nDM)] = dataOut[nDM/2:N-nDM/2]
+		out[(nDM/2 + i*(N-nDM)):(nDM/2 + (i+1)*(N-nDM))] = dataOut[nDM/2:N-nDM/2]
 	
 	return out
 	
